Refocus line report on DPM metrics

--- a/templates/line_report.html
+++ b/templates/line_report.html
@@ -32,8 +32,8 @@
           <th>Window Yield %</th>
           <th>Part Yield %</th>
           <th>Confirmed Defects</th>
+          <th>Defects / Board</th>
           <th>False Calls / Board</th>
-          <th>False Call PPM</th>
           <th>False Call DPM</th>
           <th>Defect DPM</th>
           <th>Boards / Day</th>
@@ -52,7 +52,7 @@
       <canvas id="lineFalseCallChart"></canvas>
     </div>
     <div class="chart-block">
-      <canvas id="linePpmChart"></canvas>
+      <canvas id="lineQualityChart"></canvas>
     </div>
   </div>
 </section>
