--- a/templates/line_report.html
+++ b/templates/line_report.html
@@ -102,7 +102,7 @@
   </div>
 </details>
 
-<div class="field-row" id="download-controls">
+<div id="download-controls" class="field-row" style="display:none">
   <div class="field">
     <label for="file-format">Format</label>
     <select id="file-format">
@@ -110,18 +110,8 @@
       <option value="html">html</option>
     </select>
   </div>
-  <div class="field">
-    <label for="include-cover">Cover Page</label>
-    <input type="checkbox" id="include-cover" checked />
-  </div>
-  <div class="field">
-    <label for="include-summary">Executive Summary</label>
-    <input type="checkbox" id="include-summary" checked />
-  </div>
   <button id="download-report">Download</button>
   <span class="spinner" id="download-spinner" hidden></span>
-  <button id="email-report">Email Report</button>
-  <p class="pdf-host-warning">PDF generation requires a Linux or Windows host. macOS is not supported.</p>
 </div>
 {% endblock %}
 
