Standardize line report preview element IDs

--- a/templates/line_report.html
+++ b/templates/line_report.html
@@ -13,14 +13,14 @@
       <label for="end-date">End Date</label>
       <input type="date" id="end-date" />
     </div>
-    <button type="button" id="run-line-report">Run</button>
+    <button type="button" id="run-report">Run</button>
   </div>
 </div>
 
-<details id="line-preview" class="section-card">
+<details id="preview" class="section-card">
   <summary>Preview Data</summary>
   <div class="preview-content">
-    <pre id="line-preview-data" class="json-preview"></pre>
+    <pre id="preview-data" class="json-preview"></pre>
   </div>
 </details>
 
