--- a/templates/aoi_daily_report.html
+++ b/templates/aoi_daily_report.html
@@ -25,6 +25,10 @@
       <option value="pdf">pdf</option>
       <option value="html">html</option>
     </select>
+    <p class="field-note" id="file-format-note" hidden>
+      PDF downloads are available on Linux hosts that have the required PDF
+      dependencies installed.
+    </p>
   </div>
   <button id="download-report">Download</button>
   <span class="spinner" id="download-spinner" hidden></span>
