--- a/templates/report/line/kpis.html
+++ b/templates/report/line/kpis.html
@@ -1,6 +1,6 @@
 <section class="report-section">
   <h2>Benchmarking KPIs</h2>
-  <table class="report-table">
+  <table class="data-table">
     <thead>
       <tr>
         <th>Line</th>
